--- a/VendingMachine/index.html
+++ b/VendingMachine/index.html
@@ -27,7 +27,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td id="display"></td>
+                                    <th id="display"></th>
                                 </tr>
                             </tbody>
                         </table>
@@ -51,7 +51,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                            <td id="productBin"></td>
+                                <tr><td id="productBin"></td></tr>
                             </tbody>
                         </table>
                     </div>
